fix styling of stackoverflow badge

--- a/source/assets/css/all.css.scss
+++ b/source/assets/css/all.css.scss
@@ -102,7 +102,7 @@ p { line-height: 1.5em; }
 
 pre.lineno{ margin: 0px;}
 
-img {width: 100%; height: auto;}
+img {max-width: 100%; height: auto;}
 
 pre.codehilite{
   white-space: pre;
